--- a/gradle.properties
+++ b/gradle.properties
@@ -17,3 +17,4 @@ org.gradle.jvmargs=-Xmx1G
 	fabric_version=0.81.1+1.19.4
 	polymer_version=0.4.9+1.19.4
 	server_translations_api_version=2.0.0-beta.1+1.19.4-pre2
+	sgui_version=1.2.1+1.19.3
