--- a/build.gradle
+++ b/build.gradle
@@ -23,6 +23,7 @@ dependencies {
     modImplementation include("eu.pb4:polymer-resource-pack:${project.polymer_version}")
     modImplementation include("xyz.nucleoid:server-translations-api:${project.server_translations_api_version}")
     modImplementation include("eu.pb4:sgui:${project.sgui_version}")
+    modImplementation include("eu.pb4:polymer-virtual-entity:${project.polymer_version}")
     }
 
 processResources {
