--- a/gradle.properties
+++ b/gradle.properties
@@ -5,7 +5,7 @@ org.gradle.jvmargs=-Xmx1G
 	# check these on https://modmuss50.me/fabric.html
 	minecraft_version=1.19.4
 	yarn_mappings=1.19.4+build.2
-	loader_version=0.14.19
+	loader_version=0.14.20
 
 # Mod Properties
 	mod_version = 1.0.0
@@ -18,3 +18,4 @@ org.gradle.jvmargs=-Xmx1G
 	polymer_version=0.4.9+1.19.4
 	server_translations_api_version=2.0.0-beta.2+1.19.4-pre2
 	sgui_version=1.2.1+1.19.3
+	nexusframe_version=1.0.3
